--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -1,7 +1,7 @@
 @import "../../style/variables";
 
 .list_wrapper {
-  width: 260px;
+  width: 280px;
   height: auto;
   margin: 0 10px;
   background-color: $white;
@@ -18,12 +18,15 @@
     border: none;
     outline: none;
     padding: 0 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
     &:focus {
       box-shadow: 0px 0px 0.5px 2px $primary;
     }
   }
   .list_title_input {
-    width: 140px;
+    width: 280px;
   }
   textarea {
     border-radius: 5px;
@@ -46,8 +49,7 @@
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
     color: $white;
     border-radius: 5px;
-    padding: 0 15px;
-    margin-left: 10px;
+    width: 70px;
     cursor: pointer;
   }
   .button_delete {
@@ -60,10 +62,18 @@
     display: flex;
     align-items: center;
     cursor: pointer;
+    margin-top: 10px;
+    margin-bottom: 0px;
     margin-left: 10px;
+
+    p {
+      margin-left: 10px;
+      color: #5e6c84;
+    }
   }
   .more_actions {
     cursor: pointer;
     margin-left: 10px;
+    padding-left: 20px;
   }
 }
