--- a/src/components/ListItem/ListItem.module.scss
+++ b/src/components/ListItem/ListItem.module.scss
@@ -9,21 +9,19 @@
     height: 38px;
   }
   .button_container {
-    margin-top: 10px;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
     .button_primary {
       background-color: $primary;
       box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
       color: $white;
       border-radius: 5px;
       padding: 0 15px;
-      margin: 0 10px;
       height: 28px;
       cursor: pointer;
     }
     .button_delete {
+      margin-left: 10px;
       display: flex;
       align-items: center;
       cursor: pointer;
