--- a/src/components/ListItemPopUp/ListItemPopUp.module.scss
+++ b/src/components/ListItemPopUp/ListItemPopUp.module.scss
@@ -18,21 +18,34 @@
   border-radius: 5px;
   width: 75vw;
   height: 500px;
-  padding: 35px 35px 10px 35px;
+  padding: 70px 35px 10px 35px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  overflow: scroll;
   .cross {
     position: absolute;
     top: 20px;
     right: 20px;
+    margin-bottom: 20px;
     cursor: pointer;
     background-color: transparent;
   }
+
+  .list_item_image {
+    width: 100%;
+    height: 100%;
+    margin-bottom: 20px;
+    img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
   .list_item_title {
     width: 100%;
     font-weight: 600;
-    margin-bottom: auto;
+    margin-bottom: 20px;
     &:focus {
       font-weight: 400;
     }
