--- a/src/components/ListItemPopUp/ListItemPopUp.module.scss
+++ b/src/components/ListItemPopUp/ListItemPopUp.module.scss
@@ -21,7 +21,7 @@
   padding: 70px 35px 10px 35px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  // justify-content: space-between;
   overflow: scroll;
   .cross {
     position: absolute;
@@ -43,28 +43,34 @@
   }
 
   .list_item_title {
+    background-color: #c4c4c4;
     width: 100%;
     font-weight: 600;
     margin-bottom: 20px;
+    resize: none;
+    overflow: scroll;
+
     &:focus {
       font-weight: 400;
     }
-    textarea {
-      height: 200px;
-      background-color: 1px solid red;
-      padding: 0;
-      margin: 0;
-    }
   }
   .bottom_content {
-    display: flex;
-    flex-direction: column;
-
+    input {
+      visibility: hidden;
+      display: none;
+      resize: none;
+    }
+    label {
+      font-size: 14px;
+      font-weight: 700;
+      font-family: "Maven Pro", sans-serif;
+    }
     .list_item_description {
       width: 100%;
       height: 100px;
       background-color: #c4c4c4;
       margin-bottom: 30px;
+      resize: none;
     }
     .button_primary {
       background-color: $primary;
@@ -78,6 +84,7 @@
       margin-right: auto;
       margin-bottom: 15px;
       display: block;
+      text-align: center;
     }
   }
 }
